[gd_scene load_steps=4 format=3 uid="uid://b5ejdflfu6xdl"]

[ext_resource type="Script" uid="uid://dah8c7boq5st4" path="res://scenes/UI/hud.gd" id="1_37p78"]
[ext_resource type="PackedScene" uid="uid://bnvp2yq7ymekn" path="res://health_bar.tscn" id="2_rd3kb"]
[ext_resource type="FontFile" uid="uid://b8yosn0dw1ed6" path="res://art/fonts/Jersey10-Regular.ttf" id="2_y5tme"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1922.0
offset_bottom = 1081.0
color = Color(0.4584052, 0.45840496, 0.45840502, 1)

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.56600004
anchor_right = 0.5
anchor_bottom = 0.56600004
offset_left = -227.0
offset_top = -65.28003
offset_right = 218.0
offset_bottom = 57.71997
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_y5tme")
theme_override_font_sizes/font_size = 107
text = "Play"

[node name="Message" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.27
anchor_right = 0.5
anchor_bottom = 0.27
offset_left = -548.0
offset_top = -99.600006
offset_right = 548.0
offset_bottom = 100.399994
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_y5tme")
theme_override_font_sizes/font_size = 186
text = "Dynamic Defense"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Wave" type="Label" parent="."]
visible = false
modulate = Color(0.1148968, 0.11489681, 0.1148968, 1)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.16900001
anchor_right = 0.5
anchor_bottom = 0.16900001
offset_left = -179.25
offset_top = -78.496025
offset_right = 179.25
offset_bottom = -1.4960327
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_y5tme")
theme_override_font_sizes/font_size = 146
text = "Wave"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" parent="." instance=ExtResource("2_rd3kb")]
visible = false

[connection signal="button_down" from="StartButton" to="." method="_on_button_button_down"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
